# oop-laba1

./: CMakeLists.txt  README.md  abstractanimal.h  cat.cpp  cat.h  commandhandler.cpp  commandhandler.h  dog.cpp  dog.h  main.cpp  myalgorithm.cpp  myalgorithm.h  patientdata.cpp  patientdata.h
